Update HW 3 - Data Preparation.ipynb
Now work

--- a/HW3/HW 3 - Data Preparation.ipynb
+++ b/HW3/HW 3 - Data Preparation.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -181,7 +181,7 @@
        "4     14.395      0.75        0.0      1  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -376,7 +376,7 @@
        "max      1.000000   36.997400  219.000000  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -414,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -465,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -503,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -512,7 +512,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -533,7 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -542,7 +542,7 @@
        "np.float64(0.5590588235294117)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -568,7 +568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -600,7 +600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -623,7 +623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -632,7 +632,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -660,7 +660,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -669,7 +669,7 @@
        "np.float64(0.5575249999999999)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -689,7 +689,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -729,14 +729,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "your current url is:  https://kmutt.me/LUartyin30557542\n"
+      "your current url is:  https://kmutt.me/LUartyin30557L\n"
      ]
     }
    ],
@@ -750,7 +750,7 @@
     "rain_avg = average_count[\"rain\"]\n",
     "\n",
     "# Get the groupby_character followed by instructions (concatenating first characters of each weather type)\n",
-    "groupby_character = str(clear_avg)[0] + str(misty_avg)[0] + str(rain_avg)[0]\n",
+    "groupby_character = chr(int(clear_avg+(misty_avg-rain_avg)))\n",
     "\n",
     "# concatenate the groupby_character to the url\n",
     "url = url + groupby_character\n",
@@ -760,14 +760,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "your final url is:  https://kmutt.me/LUartyin30557542\n"
+      "your final url is:  https://kmutt.me/LUartyin30557L\n"
      ]
     }
    ],
@@ -794,7 +794,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -805,7 +805,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -935,7 +935,7 @@
        "4               Transportation                 7870  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -946,7 +946,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -958,7 +958,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -973,7 +973,7 @@
     "# Concatenate all organization datasets together\n",
     "df_organizations = pd.concat([organizations_1, organizations_2, organizations_3], ignore_index=True)\n",
     "\n",
-    "# Get the standard deviation of the column \"employees\"\n",
+    "# Get the standard deviation of the column \"employees\"groupby_character = str(clear_avg)[0] + str(misty_avg)[0] + str(rain_avg)[0]\n",
     "std_employees = df_organizations[\"Number of employees\"].std()\n",
     "\n",
     "# Show standard deviation\n",
@@ -982,14 +982,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "your current url is:  https://kmutt.me/LUartyin30557542N\n"
+      "your current url is:  https://kmutt.me/LUartyin30557LN\n"
      ]
     }
    ],
@@ -1020,7 +1020,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -1160,7 +1160,7 @@
        "4       60       50     65           1      False  "
       ]
      },
-     "execution_count": 22,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1172,7 +1172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -1200,96 +1200,17 @@
       "Water       443.736607\n",
       "Name: stat, dtype: float64\n"
      ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/tmp/ipykernel_161340/1823497197.py:2: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise an error in a future version of pandas. Value '[ 53.9  68.2  90.2 110.   57.2  70.4  92.4 143.  114.4  52.8  69.3  91.3\n",
-      " 113.3  49.5  66.   88.   88.   61.6  89.1  66.   99.   45.1  83.6  49.5\n",
-      "  77.   55.   71.5  88.   49.5  77.   57.2  90.2  77.  121.   55.   71.5\n",
-      " 104.5  82.5  99.  115.5  44.   77.   93.5 110.   71.5  82.5  82.5  71.5\n",
-      "  93.5 121.   49.5  77.   71.5 104.5 115.5 143.   44.  104.5  60.5   5.5\n",
-      "  60.5 104.5 137.5  44.   71.5  73.7 101.2  49.5  82.5 104.5 110.   11.\n",
-      " 137.5 170.5  93.5  52.8  60.5  71.5 143.   66.  121.  110.   53.9  68.2\n",
-      "  90.2  57.2  70.4  92.4  71.5  88.  115.5  50.6  83.6  33.   55.   41.8\n",
-      "  63.8  33.   88.   22.   55.   82.5  38.5  49.5  60.5  77.   33.   82.5\n",
-      "  49.5  93.5  82.5  88.   77.  104.5  88.  143.   44.   55.   60.5  71.5\n",
-      " 115.5  44.  104.5  88.  104.5  22.   82.5  88.   11.  126.5  82.5 143.\n",
-      "  49.5  71.5  93.5 121.   66.   93.5 132.  176.   77.   93.5 121.  165.\n",
-      "  33.   77.   33.   55.   77.   44.   77.  110.   60.5  93.5  33.   55.\n",
-      "  44.  143.   66.   88.  176.   56.1  78.1 100.1  22.   49.5  71.5  66.\n",
-      "  99.  132.  154.   77.   99.   66.  110.  132.   93.5  66.   93.5 126.5\n",
-      "  44.  126.5  52.8  85.8  88.  132.   16.5  66.   77.   99.   74.8  70.4\n",
-      " 114.4  92.4  99.   33.  110.  165.   74.8  97.9 119.9  63.8  85.8 114.4\n",
-      "  56.1  72.6  94.6  60.5  82.5 132.   49.5  93.5  33.   77.   71.5 115.5\n",
-      "  38.5  66.   52.8  91.3 110.   72.6  83.6 149.6  60.5  90.2   5.5  71.5\n",
-      "  93.5 110.   53.9  75.9  22.   68.2 101.2 145.2  93.5 110.  104.5 121.\n",
-      "  88.  132.   99.  176.   88.  110.  110.  113.3 132.   49.5  66.   82.5\n",
-      "  69.3 102.3 135.3  60.5  82.5 110.   60.5  93.5  66.   88.  121.   58.3\n",
-      " 107.8  58.3 107.8  58.3 107.8  60.5  84.7 126.5  66.   66.   55.   71.5\n",
-      " 104.5  29.7  73.7  38.5  66.  101.2  99.  154.   33.   94.6  85.8 118.8\n",
-      "  55.  104.5  48.4  95.7  66.  110.   60.5  93.5  44.   66.   82.5  55.\n",
-      " 103.4 121.   91.3 135.3 106.7  99.   79.2  79.2  84.7 140.8  67.1  85.8\n",
-      " 117.7  49.5  64.9  75.9  61.6  69.3 104.5  39.6  61.6  55.   80.3  89.1\n",
-      "  55.   74.8  71.5 110.   88.   58.3  80.3 121. ]' has dtype incompatible with int64, please explicitly cast to a compatible dtype first.\n",
-      "  pokemon.loc[pokemon[\"Type 1\"].isin([\"Normal\", \"Grass\", \"Fire\", \"Water\"]), \"Attack\"] *= 1.1\n",
-      "/tmp/ipykernel_161340/1823497197.py:3: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise an error in a future version of pandas. Value '[ 48.4  75.9  44.   60.5  57.2  73.7  95.7  44.   62.7  84.7  38.5  77.\n",
-      "  38.5  66.   55.   77.   88.   77.  104.5  55.   82.5  55.   77.   58.3\n",
-      "  86.9 104.5 132.   38.5  62.7  66.  110.   93.5  88.   16.5  44.   60.5\n",
-      "  93.5 115.5  44.   88.   49.5  38.5 104.5  16.5  40.7  82.5  33.   66.\n",
-      "  60.5  82.5  93.5  44.   66.   88.   44.   55.   58.3  91.3  66.   55.\n",
-      "  88.   88.   55.   77.   99.  110.   37.4  53.9  86.9  77.   51.7  73.7\n",
-      "  44.   77.   96.8  99.  121.   44.   71.5 126.5  73.7 121.   88.   77.\n",
-      "  84.7 117.7 117.7 117.7 117.7 117.7  35.2  69.3  60.5  93.5 104.5  93.5\n",
-      "  82.5  68.2  90.2  55.   71.5  93.5  66.   44.   77.   88.   44.   88.\n",
-      "  33.   55.   66.   77.   77.   68.2  85.8  66.   99.   36.3  57.2  82.5\n",
-      "  62.7  93.5 202.4]' has dtype incompatible with int64, please explicitly cast to a compatible dtype first.\n",
-      "  pokemon.loc[pokemon[\"Type 1\"].isin([\"Electric\", \"Ice\", \"Fighting\", \"Poison\"]), \"Defense\"] *= 1.1\n",
-      "/tmp/ipykernel_161340/1823497197.py:4: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise an error in a future version of pandas. Value '[ 49.5  33.   77.   55.   38.5  82.5 159.5  44.   71.5  27.5  33.   49.5\n",
-      "  99.  104.5 132.   99.  115.5 132.  165.   46.2  73.7  38.5  49.5  27.5\n",
-      "  44.   99.  115.5  93.5 115.5 143.  143.  154.  110.   60.5  93.5  33.\n",
-      "  44.   77.  104.5 104.5 121.   52.8  36.3  16.5  44.   93.5  71.5  82.5\n",
-      "   5.5  93.5  82.5  44.   55.  121.  110.   22.   16.5  71.5  16.5  71.5\n",
-      "  44.   55.   88.  110.   71.5  66.   44.  176.   44.   93.5  93.5  66.\n",
-      "  88.   11.   77.  110.   60.5  82.5  71.5  25.3  99.   99.  165.  165.\n",
-      "  99.  198.   27.5  71.5  39.6  39.6  39.6  39.6  72.6  77.   44.   49.5\n",
-      "  66.   35.2  51.7  44.  104.5 104.5  88.  121.  104.5  88.  126.5  93.5\n",
-      " 110.   26.4  31.9  79.2 125.4  74.8  96.8  46.2  46.2 101.2  62.7  51.7\n",
-      " 123.2  71.5  81.4 101.2  60.5  49.5 106.7  49.5  60.5  71.5  22.   33.\n",
-      "  33.   66.   22.   71.5 118.8  33.   44.   27.5 159.5  35.2  38.5  60.5\n",
-      " 119.9  66.  110.  122.1 133.1 111.1 100.1 108.9  38.5  31.9  97.9  74.8\n",
-      " 114.4 114.4  60.5 135.3  77.   88. ]' has dtype incompatible with int64, please explicitly cast to a compatible dtype first.\n",
-      "  pokemon.loc[pokemon[\"Type 1\"].isin([\"Ground\", \"Flying\", \"Psychic\", \"Bug\"]), \"Speed\"] *= 1.1\n",
-      "/tmp/ipykernel_161340/1823497197.py:5: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise an error in a future version of pandas. Value '[ 33.   49.5  60.5 110.  126.5 143.  187.   33.   99.  126.5  60.5  71.5\n",
-      "  66.   77.   55.   77.  110.   33.   66.   93.5  93.5  38.5  88.  121.\n",
-      " 154.   49.5  71.5 104.5 104.5  33.   66.   49.5  71.5  93.5  77.  121.\n",
-      " 104.5  60.5  67.1  89.1  44.   77.   69.3  91.3 102.3  33.   66.   82.5\n",
-      " 126.5  44.   66.  121.  132.   55.  121.  154.  143.  176.  165.  198.\n",
-      "  33.   71.5  46.2  51.7  66.   99.  115.5 115.5  11.  101.2  44.   55.\n",
-      "  88.  132.   49.5  82.5  71.5 110.  132.  148.5  55.   96.8  27.5  55.\n",
-      "  66.   38.5  49.5  60.5 104.5  81.4 123.2  88.  132.   71.5 104.5 159.5\n",
-      "  33.   44.   66.   66.   44.   66.   49.5  60.5  49.5  71.5 137.5  79.2\n",
-      " 165.  132.  143.  132.  187.   40.7  74.8  42.9  59.4  49.5  75.9  73.7\n",
-      " 108.9  55.   60.5  91.3 121.   55.   71.5  48.4  48.4  48.4  48.4  63.8\n",
-      "  63.8  63.8  63.8 144.1  89.1 110.  176. ]' has dtype incompatible with int64, please explicitly cast to a compatible dtype first.\n",
-      "  pokemon.loc[pokemon[\"Type 1\"].isin([\"Rock\", \"Ghost\", \"Dragon\", \"Dark\"]), \"Sp. Atk\"] *= 1.1\n",
-      "/tmp/ipykernel_161340/1823497197.py:6: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise an error in a future version of pandas. Value '[120.  105.  120.  120.   67.5 105.   97.5 105.  142.5 142.5 120.  112.5\n",
-      " 142.5 120.  127.5 120.  127.5 135.  105.  142.5 112.5 142.5 135.  150.\n",
-      " 180.  150.  120.  105.  142.5  67.5 142.5 112.5 135.  150.  231.  150.\n",
-      " 127.5 127.5  75.  202.5  75.   90.  120.   97.5 120.   90.  135.  165.\n",
-      " 195.  225.  165.  180.  150.   75.   30.  135.  106.5  75.   99.  144.\n",
-      " 144.  157.5  88.5 127.5 105.  127.5  84.  112.5 172.5 105.  195.  105.\n",
-      " 135.  112.5 180.  150.  142.5  75.   94.5  94.5  94.5  94.5  82.5 120.\n",
-      " 103.5 112.5 105.  120.   97.5  90.   90.   90.   90.  202.5  90.   90.\n",
-      "  72.  157.5 108.  135.  193.5 120.  135.  120.  120.  120.  120.  135.\n",
-      " 135.  115.5 142.5 150.  106.5 103.5  99.  135.  121.5 121.5 141.   94.5\n",
-      " 100.5 120.  165. ]' has dtype incompatible with int64, please explicitly cast to a compatible dtype first.\n",
-      "  pokemon.loc[pokemon[\"Speed\"] > 100, \"Sp. Def\"] *= 1.5\n"
-     ]
     }
    ],
    "source": [
+    "# Ensure the columns are of the correct type (float)\n",
+    "pokemon[\"Attack\"] = pokemon[\"Attack\"].astype(float)\n",
+    "pokemon[\"Defense\"] = pokemon[\"Defense\"].astype(float)\n",
+    "pokemon[\"Speed\"] = pokemon[\"Speed\"].astype(float)\n",
+    "pokemon[\"Sp. Atk\"] = pokemon[\"Sp. Atk\"].astype(float)\n",
+    "pokemon[\"Sp. Def\"] = pokemon[\"Sp. Def\"].astype(float)\n",
+    "pokemon[\"HP\"] = pokemon[\"HP\"].astype(float)\n",
+    "\n",
     "# Apply the conditions based on Type 1\n",
     "pokemon.loc[pokemon[\"Type 1\"].isin([\"Normal\", \"Grass\", \"Fire\", \"Water\"]), \"Attack\"] *= 1.1\n",
     "pokemon.loc[pokemon[\"Type 1\"].isin([\"Electric\", \"Ice\", \"Fighting\", \"Poison\"]), \"Defense\"] *= 1.1\n",
@@ -1298,33 +1219,31 @@
     "pokemon.loc[pokemon[\"Speed\"] > 100, \"Sp. Def\"] *= 1.5\n",
     "pokemon.loc[pokemon[\"Legendary\"], \"HP\"] += 100\n",
     "\n",
-    "# Calulate the stat after applying the conditions\n",
+    "# Calculate the stat after applying the conditions\n",
     "pokemon[\"stat\"] = pokemon[\"Attack\"] + pokemon[\"Defense\"] + pokemon[\"Speed\"] + pokemon[\"Sp. Atk\"] + pokemon[\"Sp. Def\"] + pokemon[\"HP\"]\n",
     "\n",
     "# Group by Type 1 and find the average of the stat column\n",
     "average_stat = pokemon.groupby(\"Type 1\")[\"stat\"].mean()\n",
-    "print(average_stat)\n",
-    "\n",
-    "        "
+    "print(average_stat)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "your final url is:  https://kmutt.me/LUartyin30557542Npikachu\n"
+      "your final url is:  https://kmutt.me/LUartyin30557LNpikachu\n"
      ]
     }
    ],
    "source": [
     "url = url + \"pikachu\"\n",
     "\n",
-    "print(\"your final url is: \", url)"
+    "print(\"your final url is: \", url)\n"
    ]
   },
   {
@@ -1336,7 +1255,7 @@
     "Access the secret URL and complete your quest! 🚀🔓\n",
     "\n",
     "Question: What is the final secret URL? \\\n",
-    "Ans: https://kmutt.me/LUartyin30557542Npikachu\n"
+    "Ans: https://kmutt.me/LUartyin30557LNpikachu redirect to https://www.youtube.com/watch?v=dQw4w9WgXcQ\n"
    ]
   },
   {
