fix last question on HW3

--- a/HW3/HW 3 - Data Preparation.ipynb
+++ b/HW3/HW 3 - Data Preparation.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -181,7 +181,7 @@
        "4     14.395      0.75        0.0      1  "
       ]
      },
-     "execution_count": 27,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -376,7 +376,7 @@
        "max      1.000000   36.997400  219.000000  "
       ]
      },
-     "execution_count": 29,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -414,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -465,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -503,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -512,7 +512,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -533,7 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -542,7 +542,7 @@
        "np.float64(0.5590588235294117)"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -568,7 +568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -600,7 +600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -623,7 +623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -632,7 +632,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -660,7 +660,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -669,7 +669,7 @@
        "np.float64(0.5575249999999999)"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -689,7 +689,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -729,7 +729,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -760,7 +760,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -794,7 +794,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -805,7 +805,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -935,7 +935,7 @@
        "4               Transportation                 7870  "
       ]
      },
-     "execution_count": 42,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -946,7 +946,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -958,7 +958,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -982,7 +982,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1020,7 +1020,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1160,7 +1160,7 @@
        "4       60       50     65           1      False  "
       ]
      },
-     "execution_count": 46,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1172,7 +1172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1180,24 +1180,24 @@
      "output_type": "stream",
      "text": [
       "Type 1\n",
-      "Bug         391.747826\n",
-      "Dark        467.883871\n",
-      "Dragon      609.981250\n",
-      "Electric    470.765909\n",
-      "Fairy       419.058824\n",
-      "Fighting    426.611111\n",
-      "Fire        480.486538\n",
-      "Flying      576.500000\n",
-      "Ghost       458.043750\n",
-      "Grass       437.764286\n",
-      "Ground      464.203125\n",
-      "Ice         453.204167\n",
-      "Normal      416.168367\n",
-      "Poison      407.453571\n",
-      "Psychic     527.043860\n",
-      "Rock        474.118182\n",
-      "Steel       505.888889\n",
-      "Water       443.736607\n",
+      "Bug         397.421159\n",
+      "Dark        474.940323\n",
+      "Dragon      621.740625\n",
+      "Electric    474.440227\n",
+      "Fairy       419.764706\n",
+      "Fighting    429.766667\n",
+      "Fire        485.790000\n",
+      "Flying      580.050000\n",
+      "Ghost       463.191250\n",
+      "Grass       441.222857\n",
+      "Ground      469.316250\n",
+      "Ice         458.350000\n",
+      "Normal      420.213776\n",
+      "Poison      410.830357\n",
+      "Psychic     529.489123\n",
+      "Rock        478.896364\n",
+      "Steel       512.388889\n",
+      "Water       447.125893\n",
       "Name: stat, dtype: float64\n"
      ]
     }
@@ -1216,6 +1216,10 @@
     "pokemon.loc[pokemon[\"Type 1\"].isin([\"Electric\", \"Ice\", \"Fighting\", \"Poison\"]), \"Defense\"] *= 1.1\n",
     "pokemon.loc[pokemon[\"Type 1\"].isin([\"Ground\", \"Flying\", \"Psychic\", \"Bug\"]), \"Speed\"] *= 1.1\n",
     "pokemon.loc[pokemon[\"Type 1\"].isin([\"Rock\", \"Ghost\", \"Dragon\", \"Dark\"]), \"Sp. Atk\"] *= 1.1\n",
+    "pokemon.loc[pokemon[\"Type 2\"].isin([\"Normal\", \"Grass\", \"Fire\", \"Water\"]), \"Attack\"] *= 1.1\n",
+    "pokemon.loc[pokemon[\"Type 2\"].isin([\"Electric\", \"Ice\", \"Fighting\", \"Poison\"]), \"Defense\"] *= 1.1\n",
+    "pokemon.loc[pokemon[\"Type 2\"].isin([\"Ground\", \"Flying\", \"Psychic\", \"Bug\"]), \"Speed\"] *= 1.1\n",
+    "pokemon.loc[pokemon[\"Type 2\"].isin([\"Rock\", \"Ghost\", \"Dragon\", \"Dark\"]), \"Sp. Atk\"] *= 1.1\n",
     "pokemon.loc[pokemon[\"Speed\"] > 100, \"Sp. Def\"] *= 1.5\n",
     "pokemon.loc[pokemon[\"Legendary\"], \"HP\"] += 100\n",
     "\n",
@@ -1229,7 +1233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
